# SatHealth_analysis

./: Makefile  README.md  environment.yml  pyproject.toml
docs/: README.md  mkdocs.yml
docs/docs/: getting-started.md  index.md
notebooks/: 00-open_data.ipynb  01-prototype_dataset.ipynb  03-modeling_test.ipynb  04-corr_screening.ipynb  05-embedded.ipynb  06-wrapper.ipynb  open_data.ipynb
references/: README_SatHealth.md  column_dictionary.csv
reports/figures/: corr_mat.csv
src/: config.py
src/data/: dataset.py  loaders.py  merge.py  targets.py
src/feature_selection/: embedded.py  filter.py  run.py  stability.py  wrapper.py
